chore: expand checklist